# uade

./: CMakeLists.txt  compilersupport.h.in  options.h.in  ossupport.c.in  ossupport.h.in  sysincludes.h.in
compat/: canonrep.c  dirent_win32.c  dirent_win32.h
src/: audio.c  build68k.c  cfgfile.c  cia.c  compiler.c  custom.c  debug.c  fpp.c  gencpu.c  memory.c  missing.c  newcpu.c  readcpu.c  sd-sound-generic.c  text_scope.c  uade.c  uademain.c
src/frontends/common/: amifilemagic.c  eagleplayer.c  effects.c  songdb.c  songinfo.c  uadeconf.c  uadeipc.c  uadestate.c  unixatomic.c  unixsupport.c
src/frontends/include/uade/: uadeconfstructure.h  uadeipc.h  uadestate.h  unixatomic.h  unixsupport.h  vparray.h
src/frontends/uadesimple/: uadesimple.c  win-audio.c
src/include/: sysdeps.h
src/machdep/: support.c
